<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".NewTeamActivity">

    <TextView
        android:id="@+id/createTeamTitleTv"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:gravity="center"
        android:text="@string/create_team_prompt_title"
        android:textColor="#C88013"
        android:textSize="28sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="49dp" />

    <EditText
        android:id="@+id/nameEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/team_name_et_hint"
        android:inputType="textPersonName" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="32dp" />

    <Button
        android:id="@+id/createBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_team_btn_text" />

</LinearLayout>