<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/gameLogoIv"
        android:layout_width="match_parent"
        android:layout_height="103dp"
        app:srcCompat="@drawable/activity_main_drawable" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="90dp" />

    <TextView
        android:id="@+id/loginTv"
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:gravity="center"
        android:text="@string/login_prompt_title"
        android:textColor="#C88013"
        android:textSize="23sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="45dp" />

    <Button
        android:id="@+id/joinTeamBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#BABABA"
        android:onClick="joinTeamBtnClick"
        android:text="@string/join_team_btn_text"
        android:textColor="#000000" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="65dp" />

    <Button
        android:id="@+id/newTeamBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFBABABA"
        android:onClick="newTeamBtnClick"
        android:text="@string/new_team_btn_text"
        android:textColor="#000000" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="65dp" />

    <ImageView
        android:id="@+id/uniPannoniaCrestIv"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:srcCompat="@drawable/uni_pannonia_crest" />
</LinearLayout>